# Reconcile

./: .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml  serve.py
docs/: index.html
docs/assets/: index-B9QUADBN.css  index-D_n-17dX.js  index-TS2s5Ebu.css
examples/: __init__.py  clinical_trials_system.py  loan_operating_system.py  procurement_system.py
landing/: index.html  package-lock.json  package.json  vite.config.ts
landing/src/: App.tsx  index.css
python/reconcile/: __init__.py  controller.py  dsl.py  llm.py  platform.py  subscriptions.py  testing.py
python/reconcile/api/: __init__.py  app.py  platform_app.py
python/reconcile/examples/: __init__.py  building_permit_system.py  clinical_trials_system.py  loan_operating_system.py  procurement_system.py
rust/reconcile-core/: Cargo.toml
rust/reconcile-core/src/: agent.rs  audit_log.rs  circuit_breaker.rs  controller_scheduler.rs  decision.rs  errors.rs  event_log.rs  instance_graph.rs  invariant_checker.rs  lib.rs  policy_engine.rs  projection.rs  resource_registry.rs  roles.rs  saga.rs  schema_graph.rs  snapshot_store.rs  state_machine.rs  state_store.rs  storage.rs  temporal_graph.rs  tests.rs  transaction.rs  types.rs  workflow.rs
rust/reconcile-postgres/: Cargo.toml
rust/reconcile-postgres/migrations/: V1__init.sql
rust/reconcile-postgres/src/: audit_log.rs  backend.rs  event_log.rs  lib.rs  snapshot_store.rs  state_store.rs  tests.rs
rust/reconcile-py/: Cargo.toml
rust/reconcile-py/src/: lib.rs  py_system.rs  py_types.rs
tests/python/: conftest.py  test_agents.py  test_api.py  test_api_extended.py  test_audit.py  test_basic_lifecycle.py  test_controllers.py  test_convergence.py  test_desired_state.py  test_dsl_extended.py  test_e2e_lending_book.py  test_edge_cases.py  test_events.py  test_graph.py  test_insurance_claims.py  test_invariants.py  test_llm_adapter.py  test_llm_adapter_extended.py  test_loan_origination.py  test_platform.py  test_platform_api.py  test_policies.py  test_postgres.py  test_projection.py  test_reference_examples.py  test_robustness.py  test_roles.py  test_testing_harness.py  test_transitions.py  test_websocket.py
ui/: package-lock.json  package.json
ui/src/: App.css  App.tsx
