[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "reconcile"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "reconcile._native"
python-source = "python"
manifest-path = "rust/reconcile-py/Cargo.toml"

[tool.pytest.ini_options]
testpaths = ["tests/python"]
asyncio_mode = "auto"
