[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "reconcile-framework"
version = "0.1.1"
description = "Governance runtime for enterprise workflows, policies, and state transitions."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
api = ["fastapi", "pydantic"]
dev = ["pytest", "pytest-asyncio", "httpx"]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "reconcile._native"
python-source = "python"
manifest-path = "rust/reconcile-py/Cargo.toml"

[tool.pytest.ini_options]
testpaths = ["tests/python"]
asyncio_mode = "auto"
