[package]
name = "reconcile-postgres"
version = "0.1.0"
edition = "2021"

[dependencies]
reconcile-core = { path = "../reconcile-core" }
postgres = { version = "0.19", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
refinery = { version = "0.9", features = ["postgres"] }
