[package]
name = "reconcile-py"
version = "0.1.0"
edition = "2021"

[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
reconcile-core = { path = "../reconcile-core" }
reconcile-postgres = { path = "../reconcile-postgres" }
pyo3 = { version = "0.23", features = ["extension-module"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
